fix wrap on ios safari

--- a/online-resume.client/src/app/resume-container/resume-container.component.css
+++ b/online-resume.client/src/app/resume-container/resume-container.component.css
@@ -137,4 +137,5 @@
 .summary-paragraph{
     word-wrap: break-word;
     max-width: 100vw;
+    white-space: break-spaces;
 }
